apps/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress-route
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.khider.fr`)
      services:
        - name: sonarr
          port: 8989
    - kind: Rule
      match: Host(`sonarr.local.khider.fr`)
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: sonarr-middleware
          namespace: traefik
 
  tls:
    secretName: sonarr-cert
